--- a/assets/cuba/css/style.css
+++ b/assets/cuba/css/style.css
@@ -10802,7 +10802,7 @@ p.data-attributes svg {
      41. Chart CSS End
 ==========================**/
 /**=====================
-     14. Chat CSS Start
+     14. Chat1 CSS Start
 ==========================**/
 .chat-box .toogle-bar {
   display: none; }
