--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+.nav-menus li .settings {
+	cursor: pointer !important;
+}
+
+#develbar-container {
+	z-index: 99;
+}
+
 .preloader-container {
 	display: -webkit-box;
 	display: -ms-flexbox;
