memodifikasi banyak, dibagian user dan role management

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,11 @@
 }
 
 #develbar-container {
-	z-index: 99;
+	z-index: 99 !important;
+}
+
+#develbar-off {
+	z-index: 100 !important;
 }
 
 .preloader-container {
